chores:add home container - to hold constant width - to avoid screen flickering

--- a/frontend/views/static/styles/home.layout.css
+++ b/frontend/views/static/styles/home.layout.css
@@ -1,4 +1,7 @@
 /* Home page styles */
+.home-container {
+	min-width: 100%;
+}
 .home-page {
 	position: relative;
 	margin-right: 8%;
